# razomentalist

./: .document_3.kra-autosave.kra  .gitignore  CMakeLists.txt  README.md  build.sh  carol.h  carol.h.backup  clear.sh  index.css  main.c  main.c.backup  run.sh
artwork/: document_3.kra  grid.kra
